proxy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: caddy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: caddy
  template:
    metadata:
      labels:
        app: caddy
    spec:
      hostNetwork: true
      containers:
        - name: caddy
          image: caddy:latest
          ports:
            - containerPort: 80
            - containerPort: 443
          volumeMounts:
            - mountPath: /etc/caddy
              name: caddy-config-volume
            - mountPath: /data
              name: caddy-storage
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
      volumes:
        - name: caddy-config-volume
          configMap:
            name: caddy-config
        - name: caddy-storage
          persistentVolumeClaim:
            claimName: caddy-pvc
