proxy/ha-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ha-service
spec:
  type: ClusterIP
  clusterIP: None
  ports:
    - name: home-assistant
      port: 8123
      protocol: TCP
      targetPort: 8123
---
apiVersion: v1
kind: Endpoints
metadata:
  name: ha-service
subsets:
  - addresses:
      - ip: 192.168.100.32
    ports:
      - name: home-assistant
        port: 8123
        protocol: TCP
