proxy/nr-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nr-service
spec:
  type: ExternalName
  externalName: 192.168.100.32
  ports:
    - port: 1880
