proxy/pi-32.yaml
apiVersion: v1
kind: Service
metadata:
  name: pi-32
spec:
  type: ExternalName
  externalName: 192.168.100.32
  ports:
    - port: 8123
