proxy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: caddy-service
spec:
  type: NodePort
  selector:
    app: caddy
  ports:
    - protocol: TCP
      port: 80
      nodePort: 30080
