proxy/ha-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ha-ingress
spec:
  ingressClassName: "caddy"
  rules:
    - host: "ha.punter3.nl"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ha-service
                port:
                  number: 8123
