proxy/home-assistant.yaml
apiVersion: v1
kind: Service
metadata:
  name: ha-service
spec:
  type: ClusterIP
  clusterIP: None
  ports:
    - name: home-assistant
      port: 8123
      protocol: TCP
      targetPort: 8123
---
apiVersion: v1
kind: Endpoints
metadata:
  name: ha-service
subsets:
  - addresses:
      - ip: 192.168.100.32
    ports:
      - name: home-assistant
        port: 8123
        protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ha-ingress
spec:
  ingressClassName: "caddy"
  rules:
    - host: "testha.punter3.nl"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ha-service
                port:
                  number: 8123
