proxy/node-red.yaml
apiVersion: v1
kind: Service
metadata:
  name: nr-service
spec:
  type: ClusterIP
  clusterIP: None
  ports:
    - name: node-red
      port: 1880
      protocol: TCP
      targetPort: 1880
---
apiVersion: v1
kind: Endpoints
metadata:
  name: nr-service
subsets:
  - addresses:
      - ip: 192.168.100.32
    ports:
      - name: node-red
        port: 1880
        protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nr-ingress
spec:
  ingressClassName: "caddy"
  rules:
    - host: "nr.punter3.nl"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nr-service
                port:
                  number: 1880
