proxy/test.yaml
apiVersion: v1
kind: Service
metadata:
  name: test-service
spec:
  type: ClusterIP
  clusterIP: None
  ports:
    - name: test-server
      port: 8888
      protocol: TCP
      targetPort: 8888
---
apiVersion: v1
kind: Endpoints
metadata:
  name: test-service
subsets:
  - addresses:
      - ip: 192.168.100.32
    ports:
      - name: test-server
        port: 8888
        protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-ingress
spec:
  ingressClassName: "caddy"
  rules:
    - host: "test.punter3.nl"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: test-service
                port:
                  number: 8888
